# claude-job-reporter

./: .gitignore  LICENSE  README.md  pyproject.toml
.playwright-mcp/: page-2026-05-25T20-17-09-042Z.yml
docs/superpowers/plans/: 2026-05-25-reporter.md  2026-05-28-trim-and-refine-loop.md
docs/superpowers/specs/: 2026-05-25-reporter-design.md  2026-05-28-trim-and-refine-loop.md
src/reporter/: cli.py  compactor.py  config.py  crawler.py  output.py  prompts.py  refine.py  reporter.py
tests/: test_cli_integration.py  test_compactor.py  test_config.py  test_crawler.py  test_output.py  test_prompts.py  test_refine.py  test_reporter.py
tests/fixtures/: fake_claude.sh  sample_session.jsonl
