[project]
name = "reporter"
version = "0.1.0"
description = "Daily activity reports from Claude Code session transcripts"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyperclip>=1.8",
    "tomli-w>=1.0",
]

[project.scripts]
reporter = "reporter.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reporter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
