[project]
name = "claude-job-reporter"
version = "0.1.0"
description = "Daily activity reports from Claude Code session transcripts"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Alif", email = "alif@example.com" },
]
keywords = ["claude-code", "report", "cli", "activity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.12",
    "pyperclip>=1.8",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/alifwr/claude-job-reporter"
Repository = "https://github.com/alifwr/claude-job-reporter"
Issues = "https://github.com/alifwr/claude-job-reporter/issues"

[project.scripts]
reporter = "reporter.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reporter"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
